# Urban_Intelligence

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: cd.yml  ci.yml
api/: __init__.py  main.py
api/routers/: __init__.py  experiments.py  monitoring.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/api/: __init__.py  graphql_schema.py  main.py  websocket.py
backend/api/routers/: __init__.py  cities.py  experiments.py  monitoring.py  predictions.py
backend/scripts/: run_etl.py  run_training.py  scheduled_retrain.py
backend/src/: __init__.py  config.py
backend/src/data/: __init__.py  data_service.py  generator.py
backend/src/database/: __init__.py  db_manager.py
backend/src/etl/: __init__.py  cleaner.py  transformer.py
backend/src/features/: __init__.py  calendar_features.py  feature_store.py  text_features.py  vision_features.py
backend/src/modeling/: __init__.py  ab_testing.py  trainer.py  transfer_learning.py
backend/src/monitoring/: __init__.py  drift_detector.py  performance_monitor.py
backend/src/validation/: __init__.py  expectations.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_models.py
frontend/: .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  services.ts
frontend/src/components/: Layout.tsx  index.ts
frontend/src/components/charts/: index.tsx
frontend/src/components/ui/: index.tsx
frontend/src/hooks/: index.ts
frontend/src/pages/: Analytics.tsx  AnalyticsPage.tsx  Cities.tsx  CitiesPage.tsx  Dashboard.tsx  DashboardPage.tsx  Experiments.tsx  ExperimentsPage.tsx  Monitoring.tsx  MonitoringPage.tsx  Predict.tsx  PredictPage.tsx  Settings.tsx  SettingsPage.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/example/urban_intelligence/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/models/: city.dart  monitoring.dart  prediction.dart
mobile/lib/screens/: analytics_screen.dart  cities_screen.dart  dashboard_screen.dart  monitoring_screen.dart  predict_screen.dart  settings_screen.dart
mobile/lib/services/: api_service.dart  providers.dart
mobile/lib/utils/: theme.dart
mobile/lib/widgets/: app_shell.dart  common_widgets.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
scripts/: scheduled_retrain.py
src/: __init__.py  config.py
src/data/: __init__.py  data_service.py  generator.py
src/database/: __init__.py
src/enrichement/: __init__.py
src/etl/: __init__.py  cleaner.py  transformer.py
src/experiments/: __init__.py  ab_testing.py
src/features/: __init__.py  calendar_features.py  feature_store.py  text_features.py
src/modeling/: __init__.py  ensemble.py  forecasting.py  trainer.py
src/monitoring/: __init__.py  drift_detector.py  performance_monitor.py
src/utils/: __init__.py
src/validation/: __init__.py  expectations.py
tests/integration/: __init__.py  test_pipeline.py
