# pyproject.toml
# Urban Intelligence Framework - Project Configuration
# Managed with UV for reproducible environments

[project]
name = "urban-intelligence"
version = "1.0.0"
description = "Urban Intelligence Framework for Airbnb Price Prediction using Polars, DuckDB, MLflow, and Streamlit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Francisco Javier Mercader Martínez", email = "fcojavier.mercader04@gmail.com" },
]
keywords = [
  "airbnb",
  "machine-learning",
  "polars",
  "duckdb",
  "mlflow",
  "streamlit",
  "xgboost",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # Core data processing
  "polars>=1.0.0",
  "duckdb>=1.0.0",
  "numpy>=1.26.0",
  "pyarrow>=17.0.0",
  # Machine learning
  "mlflow>=2.15.0",
  "xgboost>=2.1.0",
  "optuna>=3.6.0",
  "scikit-learn>=1.5.0",
  # Web interfaces
  "streamlit>=1.37.0",
  "plotly>=5.22.0",
  # Configuration
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  # Web scraping
  "beautifulsoup4>=4.12.0",
  "requests>=2.31.0",
  "lxml>=5.0.0",
  # API serving
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  # Data validation
  "great-expectations>=0.18.0",
  # Scientific computing (for drift detection)
  "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
  # Testing
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  # Linting and formatting
  "ruff>=0.5.0",
  # Pre-commit
  "pre-commit>=3.7.0",
  # Security
  "bandit>=1.7.0",
]

[project.scripts]
urban-etl = "scripts.run_etl:main"
urban-train = "scripts.run_training:main"
urban-app = "app.streamlit_app:main"
urban-api = "api.main:main"
urban-cli = "scripts.data_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api", "app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401", "N803"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]                          # Allow assert statements

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
